Fixed (?) weird spacing

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,6 @@
 
 #inputFields
 {
-	width: 40%;
 	padding: 20px;
 	border: 2px solid #5f5f5f;
 	border-radius: 5px;
@@ -106,7 +105,6 @@
 
 #jsonDisplay
 {
-	width: 40%;
 	padding: 5px;
 	border: 2px solid #5f5f5f;
 	border-radius: 5px;
